--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 
 
-  <title>Targeted Extinction of Drug Cues During Sleep - LearnMem2023</title>
+  <title>Targeted Extinction of Drug Cues During Sleep</title>
   <link rel="icon" type="image/x-icon" href="static/images/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
@@ -51,7 +51,8 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Targeted Extinction of Drug Cues During Sleep - LearnMem2023</h1>
+            <h1 class="title is-1 publication-title">Targeted Extinction of Drug Cues During Sleep<br><br>LEARNMEM2023<br><br>Validation of an fMRI-based Olfactory Cue Reactivity Task to Measure the Learned Association
+between Alcohol Cues and Addictive Behaviour</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
@@ -75,7 +76,7 @@
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">ZI Mannheim<br>2023 International Conference on Learning and Memory</span>
+                    <span class="author-block">Central Institute of Mental Health, Mannheim<br>2023 International Conference on Learning and Memory</span>
                     <!-- <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span> -->
                   </div>
 
@@ -88,7 +89,7 @@
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
                         </span>
-                        <span>LearnMem2023 Poster</span>
+                        <span>LEARNMEM2023 Poster</span>
                       </a>
                     </span>
 
@@ -103,7 +104,16 @@
                     </a>
                   </span>
 
-            </div>
+                </div>
+                <div class="social-links">
+                  <span class="icon">
+                    <br><br><br><br><br><br>
+                    <a href="https://twitter.com/caggursoy" target="_blank"> <i class="fab fa-twitter fa-4x"></i></a> &nbsp&nbsp&nbsp&nbsp&nbsp
+                    <a href="https://github.com/caggursoy" target="_blank"> <i class="fab fa-github fa-4x"></i></a> &nbsp&nbsp&nbsp&nbsp&nbsp
+                    <a href="https://www.linkedin.com/in/cagatay-gursoy/" target="_blank"> <i class="fab fa-linkedin fa-4x"></i></a> &nbsp&nbsp&nbsp&nbsp&nbsp
+                    <a href="https://orcid.org/0000-0001-9762-7747" target="_blank"> <i class="fab fa-orcid fa-4x"></i></a> &nbsp&nbsp&nbsp&nbsp&nbsp
+                  </span>
+                </div>
           </div>
         </div>
       </div>
