Small fixes and added logo

--- a/index.html
+++ b/index.html
@@ -51,8 +51,11 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Targeted Extinction of Drug Cues During Sleep<br><br>LEARNMEM2023<br><br>Validation of an fMRI-based Olfactory Cue Reactivity Task to Measure the Learned Association
-between Alcohol Cues and Addictive Behaviour</h1>
+            <h1 class="title is-1 publication-title">Targeted Extinction of Drug Cues During Sleep</h1>
+            <h1 class="title is-1 publication-title" style="float:right"><br><br>LEARNMEM2023</h1>
+            <img src="static/images/LEARNMEM2023-Frontiers-Logo.png" width="300" height="400" alt="LEARNMEM2023 logo"/>
+            <h1 class="title is-1 publication-title"><br>Validation of an fMRI-based Olfactory Cue Reactivity Task to Measure the Learned Association
+between Alcohol Cues and Addictive Behaviour </h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
